--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>INFO2180 - Lab4 AJAX</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script src="app.js"></script>
-  </head>
-  <body>
-    <div class="container">
-        <h1>Avengers Character Search</h1>
-        <button type="button" id="searchBtn" class="btn">Search</button>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>INFO2180 - Lab4 AJAX</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="app.js"></script>
+    </head>
+    <body>
+        <div class="container">
+        <header>
+            <div class="hContainer">
+                <h1>AVENGERS CHARACTER SEARCH</h1>
+            </div>
+        </header>
+        <main>
+            <section class="search-hero">
+                <div class="fcontainer">
+                    <form action="#" method="post">
+                        <div class="form-group">
+                            <label for="search">Search by Full Name or Alias</label>
+                            <br/>
+                            <input type="text" name="search" id="search" placeholder="e.g. Captain America or Steve Rogers">    
+                        </div>
+                        <span class="bspan">
+                            <button type="button" id="searchBtn" class="btn">Search</button>
+                        </span> 
+                    </form>
+                </div>
+            </section>
+            <section class="search-result">
+                <div class="rcontainer">
+                    <h2>RESULT</h2>
+                    <hr/>
+                    <div id="result"></div>
+                </div>
+            </section>
+        </main>
     </div>
-  </body>
+    </body>
 </html>
